--- a/billetterie-backend/src/main/resources/application.properties
+++ b/billetterie-backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=billetterie-backend
 
 server.port=8085
-spring.datasource.url=jdbc:mysql://localhost:3306/billetterie-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/billetteriedbbb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
