--- a/billetterie-backend/src/main/resources/application.properties
+++ b/billetterie-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=billetterie-backend
 
 server.port=8085
-spring.datasource.url=jdbc:mysql://localhost:3306/billetteriedbbb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/billetteriedb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
