--- a/billetterie-backend/src/main/resources/application.properties
+++ b/billetterie-backend/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
+
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.serialization.write-dates-as-timestamps=false
